feat: updated users api put and post requests
